<resources>
    <string name="app_name">My Application</string>
    <string name="perfect">PERFECT</string>
    <string name="perfectads">perfect</string>
    <string name="_5_perfect">5 perfect</string>
    <string name="steigenberger_makadi">Steigenberger Makadi</string>
    <string name="madinat_makadi_safaga_road_makadi_bay">Madinat makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="from_134678">From 134678$</string>
    <string name="from_134_678">From 134 678$</string>
    <string name="for_a_tour_with_flight">for a tour with flight</string>
    <string name="about_hotel">About hotel</string>
    <string name="abuut_hotel">Abuut hotel</string>
    <string name="about_hotelADS">About hotel</string>
    <string name="_3rd_line">3rd line</string>
    <string name="_30_km_from_the_airport">30 km from the airport</string>
    <string name="wq_30_km_from_the_airport">30 km from the airport</string>
    <string name="vip_class_hotel_with_its_own_golf_courses_high_level_of_service_we_recommend_it_for_a_respectable_holiday_the_hotel_accepts_guests_over_18_years_of_age">VIP-class hotel with its own golf courses. High level of service. We recommend it for a respectable holiday. The hotel accepts guests over 18 years of age!</string>
    <string name="paid_wi_fi_in_the_lobby">paid wi-fi in the lobby</string>
    <string name="facilities">Facilities</string>
    <string name="essentials">Essentials</string>
    <string name="what_s_included">What\'s included</string>
    <string name="adsdsa">Essentials</string>
    <string name="qweqw">______________________________________________________</string>
    <string name="sdffs">______________________________________________________</string>
    <string name="у1цйуцу2й">К выбору номера</string>
    <string name="dasasd"><![CDATA[<]]></string>
    <string name="sdaads">Steigenberger Makadi</string>
    <string name="ghffg">Стандартный с видом на бассейн или сад</string>
    <string name="Slfnksd">Все включено</string>
    <string name="qweq">Кондиционер</string>
    <string name="asdasds">Подробнее о номере</string>
    <string name="dasda">Подробнее о номере</string>
    <string name="_186_600">186 600 ₽</string>
    <string name="_7">за 7 ночей с перелётом</string>
    <string name="asdasd">Выбрать номер</string>
    <string name="todo">TODO</string>
    <string name="hotel">HOTEL</string>
    <string name="as">Hotel</string>
    <string name="_1_kilimetr_from_the_bech">1 kilimetr from the bech</string>
    <string name="oб_отеле">Об отеле</string>
    <string name="_3я_линия">3-я линия</string>
    <string name="gлатный_w_fi_в_фойе">Платный Wi-Fi в фойе</string>
    <string name="_30км_до_аэропорта">30 км до аэропорта</string>
    <string name="_1км_до_пляда">1 км до пляжа</string>
    <string name="_30_км_до_аэропорта">30 км до аэропорта</string>
    <string name="отель_вип_класса">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="удообства">Удобства</string>
    <string name="что_включенр">Что включено</string>
    <string name="что_не_вкдючер">Что не включено</string>
    <string name="самое_необходимое">Самое необходимое</string>
    <string name="from_1600">From 1600$</string>
    <string name="liniya">______________________________________________________</string>
    <string name="liniya2">_______________________________________________________</string>
</resources>