<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    xmlns:app="http://schemas.android.com/apk/res-auto"

    <TextView
        android:layout_width="109dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/about_hotelADS"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:layout_width="81dp"
        android:layout_height="24dp"
        android:background="#C1CAE1"
        android:gravity="center"
        android:text="@string/_3rd_line"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="135dp"
        android:text="@string/vip_class_hotel_with_its_own_golf_courses_high_level_of_service_we_recommend_it_for_a_respectable_holiday_the_hotel_accepts_guests_over_18_years_of_age"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="161dp"
        android:layout_height="24dp"
        android:layout_marginEnd="124dp"
        android:background="#C1CAE1"
        android:gravity="center"
        android:text="@string/paid_wi_fi_in_the_lobby"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.887" />

    <TextView
        android:layout_width="161dp"
        android:layout_height="24dp"
        android:background="#C1CAE1"
        android:gravity="center"
        android:text="@string/wq_30_km_from_the_airport"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="161dp"
        android:layout_height="24dp"
        android:background="#C1CAE1"
        android:gravity="center"
        android:text="1 kilimetr from the bech"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <FrameLayout
        android:layout_width="346dp"
        android:layout_height="278dp"
        android:background="@drawable/bordeeer"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="336dp"


        >

        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/img_1" />
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"

            android:layout_marginTop="115sp"
            android:background="@drawable/img_2" />
        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginStart="10sp"

            android:layout_marginTop="210sp"
            android:background="@drawable/img_3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="20sp"
            android:text="@string/facilities"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="115sp"
            android:text="@string/what_s_included"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/adsdsa"
            android:textColor="@color/black"
            android:layout_marginTop="135sp"
            android:layout_marginStart="100sp"
            android:textSize="15sp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/essentials"
            android:textColor="@color/black"
            android:layout_marginTop="40sp"
            android:layout_marginStart="100sp"
            android:textSize="15sp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:text="@string/adsdsa"
            android:textColor="@color/black"
            android:layout_marginTop="230sp"
            android:layout_marginStart="100sp"
            android:textSize="15sp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginTop="210sp"
            android:text="@string/what_s_included"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="386dp"
            android:layout_height="100sp"
            android:layout_marginTop="80sp"
            android:text="@string/sdffs" />
        <TextView
            android:layout_width="386dp"
            android:layout_height="100sp"
            android:layout_marginTop="170sp"
            android:text="@string/qweqw" />

        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="280sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/baseline_keyboard_arrow_right_24"


            />
        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="280sp"
            android:layout_marginTop="110sp"
            android:background="@drawable/baseline_keyboard_arrow_right_24"


            />
        <ImageView
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="280sp"
            android:layout_marginTop="200sp"
            android:background="@drawable/baseline_keyboard_arrow_right_24"


            />




    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>