<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="106dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/as"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="-16dp"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintlayout"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="16dp"
            android:scrollbarSize="100dp">


            <TextView
                android:layout_width="10sp"
                android:layout_height="500dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="144dp"
                android:layout_height="28dp"
                android:background="@drawable/bordeer"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="323dp">


                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:background="@drawable/ic_star"
                    android:backgroundTint="#FFA800"
                    android:foregroundGravity="center"

                    android:paddingEnd="30sp"


                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="12sp"
                    android:gravity="center"
                    android:paddingEnd="5sp"
                    android:text="@string/_5_perfect"
                    android:textColor="#FFA800"
                    android:textSize="19sp"


                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="From 1600$"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.904" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="188dp"
                android:layout_height="27dp"
                android:layout_marginTop="-12sp"
                android:gravity="center"
                android:text="@string/for_a_tour_with_flight"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.819"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.91" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="372dp"
                android:layout_height="24dp"
                android:text="@string/madinat_makadi_safaga_road_makadi_bay"
                android:textColor="#0D72FF"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.817"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:layout_width="313dp"
                android:layout_height="31dp"
                android:text="@string/steigenberger_makadi"
                android:textColor="#CC000000"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.763"
                tools:layout_editor_absoluteX="16dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="376dp"
                android:layout_height="256dp"
                android:background="@drawable/hotelpic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.204" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



